FrontEnd - Fix task gap

--- a/TaskList.Frontend/src/components/TaskList/TaskList.module.css
+++ b/TaskList.Frontend/src/components/TaskList/TaskList.module.css
@@ -3,5 +3,5 @@
 .taskList {
     display: flex;
     flex-direction: column;
-    row-gap: var(--spacing-7);
+    gap: 10px;
 }
